# Snake

./: CMakeLists.txt  README.md
src/: Game.cpp  Game.h  main.cpp
src/Misc/: FPSCounter.cpp  FPSCounter.h  Files.cpp  Files.h  Maths.h  NonCopyable.h  NonMovable.h  RNG.h
src/ResourceManager/: ResourceHolder.cpp  ResourceHolder.h  ResourceManager.h
src/Snake/: Controller.h  HumanController.cpp  HumanController.h  Snake.cpp  Snake.h
src/States/: Game.cpp  Game.h  State.h
